async get logs